# writing_quality_prediction

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: download_data.sh
notebooks/exported_notebooks/: __init__.py
tests/: test_demo.py
writing_quality_prediction/: hello_world.py
writing_quality_prediction/config/: config.py  paths.py
writing_quality_prediction/data/: make_dataset.py
writing_quality_prediction/features/: build_features.py
writing_quality_prediction/models/: train_model.py
